syntax = "proto3";

package secret_service;

service SecretService {
    rpc CreateSecret     (CreateSecretRequest)   returns (SimpleSecretResponse);
    rpc GetSecret        (GetSecretRequest)      returns (GetSecretResponse);
    rpc GetAllSecrets    (GetAllSecretsRequest)  returns (GetAllSecretsResponse);
    rpc UpdateSecret     (UpdateSecretRequest)   returns (SimpleSecretResponse);
    rpc DeleteSecret     (DeleteSecretRequest)   returns (SimpleSecretResponse);
}

message CreateSecretRequest {
    string runner_id      = 1;
    string environment_id = 2;
    string secret_key     = 3;
    string value          = 4;
    string actor          = 5;
}

message GetSecretRequest {
    string runner_id      = 1;
    string environment_id = 2;
    string secret_key     = 3;
    int64  version        = 4;
    string actor          = 5;
}

message UpdateSecretRequest {
    string runner_id      = 1;
    string environment_id = 2;
    string secret_key     = 3;
    string new_value      = 4;
    string actor          = 5;
}

message DeleteSecretRequest {
    string runner_id      = 1;
    string environment_id = 2;
    string secret_key     = 3;
}

message GetSecretResponse {
    string secret_key     = 1;
    bytes  value          = 2;
}

message SimpleSecretResponse {
    bool success = 1;
}

message GetAllSecretsRequest {
    string runner_id      = 1;
    string environment_id = 2;
    int64  version        = 3;
}

message GetAllSecretsResponse {
    repeated KeyValuePair vals = 1;
}

message KeyValuePair { 
    string key   = 1;
    bytes  value = 2;
}
